--- a/TODO
+++ b/TODO
@@ -1,3 +1,9 @@
 Add README
 	Write that this is under creative commons
-bo: više: mehr
+
+Add
+	Jabberwocky all 3 languages version
+	Howl
+	Rage Against the Dying of the Light
+	Something by Lovecraft
+	More by Baudelaire?
