--- a/TODO
+++ b/TODO
@@ -1,2 +1,7 @@
 Add README
 	Write that this is under creative commons
+
+Texts
+	A play by Shakespeare
+	Something by Lovecraft
+	Utopia by Nick Bostrom
