--- a/TODO
+++ b/TODO
@@ -5,3 +5,9 @@ Texts
 	A play by Shakespeare
 	Something by Lovecraft
 	Utopia by Nick Bostrom
+
+poem2cards update
+	Verse → next verse cards
+	Lines → next line cards
+	Remove number of verse card generation
+	Update Tao Te Ching with this
