--- a/TODO
+++ b/TODO
@@ -8,4 +8,4 @@ Texts
 
 poem2cards update
 	Lines → next line cards
-	Update Tao Te Ching with this
+	Move verse-verse cards after their respective verses.
