--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 Add:
 Männerwürde (Friedrich Schiller, S. 210 gesammelte Gedichte)
 
+Fix order in Tao Te Ching
+
 Add README
 	Write that this is under creative commons
 
